# rfb-assessment

./: .env.example  Cargo.toml  readme.md
src/: cli.rs  config.rs  error.rs  main.rs  rpc.rs
src/commands/: address.rs  blockchain.rs  wallet.rs
